# buchloe-veranstaltungskalender

./: .clinerules  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  scrape-events.yml
assets/: index.html
buchloe_veranstaltungskalender/: compare.py  ical.py  ical_formatter.py  io.py  logging_config.py  main.py  models.py  scrape.sh  scraper.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
tests/: test_compare.py  test_full_description_fetching.py  test_ical_formatting.py  test_io.py  test_scraper_enhancements.py
