[project]
name = "buchloe-veranstaltungskalender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.5",
    "beautifulsoup4>=4.13.3",
    "pydantic>=2.11.2",
    "icalendar>=6.0.1",
    "pytz>=2024.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.4",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["buchloe_veranstaltungskalender"]

[project.scripts]
start = "buchloe_veranstaltungskalender.main:start"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
